--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sentry/nextjs": "^8.20.0",
     "@tabler/icons-react": "^3.1.0",
     "@types/three": "^0.163.0",
+    "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
